Изменения при создании таблиц схемы БД
