# src/main/java/com/example/familybenefits/api_model/benefit/AddBenefitRequest.java
@@ -29,9 +29,9 @@ public class AddBenefitRequest {
   private String documents;
 
   /**
-   * Краткая информация о городе
+   * Список городов пособия
    */
-  private CityShortInfo city;
+  private List<CityShortInfo> cityList;
 
   /**
    * Список критериев пособия
